[workspace]
members = [
    "packages/stylist",
    "packages/stylist-core",
    "packages/stylist-macros",

    "examples/benchmarks",
    "examples/yew-proc-macros",
    "examples/yew-integration",
    "examples/yew-shadow",
    "examples/yew-theme-context",
    "examples/use-media-query",
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
