[workspace]
members = [
    "packages/stylist",
    "packages/stylist-core",
    "packages/stylist-macros",

    "examples/benchmarks",
    "examples/yew-proc-macros",
    "examples/yew-integration",
    "examples/yew-shadow",
    "examples/yew-theme-context",
    "examples/yew-theme-hooks",
    "examples/use-media-query",

    "ci/codesize",
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
