[workspace]
members = [
    "packages/stylist",
    "packages/stylist-core",
    "packages/stylist-macros",

    "examples/benchmarks",
    "examples/yew-proc-macros",
    "examples/yew-integration",
    "examples/yew-shadow",
    "examples/yew-theme-context",
    "examples/yew-theme-hooks",
    "examples/use-media-query",
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true

[patch.crates-io.yew]
git = "https://github.com/yewstack/yew.git"
rev = "bbb7ded83e89838b642d5e989f96ce1d19e39bdc"
