[package]
name = "css-in-rust"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lukidoescode/css-in-rust"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2018"
description = "CSSinRust is a package for use with WASM applications providing a component level CSS styling experience."
keywords = [
    "CSS",
    "web",
    "CSSinRust",
    "yew"
]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://crates.io/crates/css-in-rust"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "^5.1.1"
rand = { version = "^0.7", features = ["small_rng"]}
lazy_static = "^1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = {version = "0.4.20", optional = true}
yew = {version = "^0.13", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
optional= true
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
]

# Changes here must be reflected in `build.rs`
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
wasm-bindgen = "^0.2.59"

# Changes here must be reflected in `build.rs`
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
wasm-bindgen-test = "^0.3.9"

[features]
yew_integration = ["yew"]
std_web = ["stdweb", "rand/stdweb", "yew/std_web"]
web_sys = ["web-sys", "rand/wasm-bindgen", "yew/web_sys"]

[package.metadata.docs.rs]
features = ["web_sys", "std_web", "yew_integration"]

