[package]
name = "stylist-benchmarks"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
yew = { version = "0.21", features = ["csr"] }
stylist = { path = "../../packages/stylist", features = [
    "browser_env",
    "yew_integration",
    "parser",
] }
web-sys = { version = "0.3.70", features = ["Window", "Performance"] }
gloo = "0.11.0"
