[package]
name = "yew-counter-style"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4"
console_log = { version = "0.2.0", features = ["color"] }
yew = { version = "0.18.0" }
stylist = { path = "../../packages/stylist", default-features = false, features = ["yew_integration"] }
