[package]
name = "example-yew-integration"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"

[dependencies]
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
yew = { version = "0.19", features = ["csr"] }
stylist = { path = "../../packages/stylist", features = [
    "yew_integration",
    "debug_style_locations",
] }

[dev-dependencies]
gloo-utils = "0.1"
gloo-timers = { version = "0.2", features = ["futures"] }
wasm-bindgen-test = "0.3.27"
wasm-bindgen = "0.2.77"

[dev-dependencies.web-sys]
version = "0.3.54"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
