[package]
name = "example-yew-integration"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
yew = "0.19.3"
stylist = { path = "../../packages/stylist", features = ["yew_integration"] }

[dev-dependencies]
gloo-utils = "0.1.4"
wasm-bindgen-test = "0.3.31"
wasm-bindgen = "0.2.81"

[dev-dependencies.web-sys]
version = "0.3.58"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
