[package]
name = "example-yew-integration"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
yew = { version = "0.22", features = ["csr"] }
stylist = { path = "../../packages/stylist", features = ["yew_integration"] }

[dev-dependencies]
gloo-utils = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-test = "0.3.33"
wasm-bindgen = "0.2.83"

[dev-dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
