[package]
name = "example-yew-proc-macros"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
yew = { git = "https://github.com/yewstack/yew" }
stylist = { path = "../../packages/stylist", default-features = false, features = ["yew_integration", "macros"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.27"
wasm-bindgen = "0.2.77"

[dev-dependencies.web-sys]
version = "0.3.54"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
