[package]
name = "example-yew-proc-macros"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
yew = { version = "0.20", features = ["csr"] }
stylist = { path = "../../packages/stylist", default-features = false, features = [
    "yew_integration",
    "macros",
] }

[dev-dependencies]
gloo-utils = "0.1.4"
wasm-bindgen-test = "0.3.31"
wasm-bindgen = "0.2.81"

[dev-dependencies.web-sys]
version = "0.3.58"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
