[package]
name = "example-yew-proc-macros"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
yew = { version = "0.22", features = ["csr"] }
stylist = { path = "../../packages/stylist", default-features = false, features = [
    "yew_integration",
    "macros",
] }

[dev-dependencies]
gloo-utils = "0.2.0"
wasm-bindgen-test = "0.3.33"
wasm-bindgen = "0.2.83"

[dev-dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
