[package]
name = "example-yew-shadow"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
yew = { version = "0.19" }
stylist = { path = "../../packages/stylist" }
once_cell = "1.8.0"

[dependencies.web-sys]
version = "0.3.54"
features = [
    "Window",
    "Document",
    "Element",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
]
