[package]
name = "yew-testbed"
version = "0.0.2"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.8"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.59"
web_logger = "0.2"
yew = { version = "^0.17.2", features = ["web_sys"] }

css-in-rust = { path = "../..", features = ["yew_integration"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
