[package]
name = "example-yew-theme-hooks"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
yew = { git = "https://github.com/yewstack/yew" }
yewtil = "0.4.0"
stylist = { path = "../../packages/stylist", features = ["yew_integration", "yew_use_style"] }
once_cell = "1.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.27"
wasm-bindgen = "0.2.77"

[dev-dependencies.web-sys]
version = "0.3.54"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "CssStyleDeclaration",
]
