[package]
name = "yew_integration"
version = "0.0.1"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
web_logger = "0.2"
yew = "0.13.2"
css-in-rust = { path = "../..", features = ["yew_integration"]}

[features]
std_web = ["yew/std_web", "css-in-rust/std_web"]
web_sys = ["yew/web_sys", "css-in-rust/web_sys"]